# zhiwei-kb-system

./: .gitignore  AUDIT.md  CODEMAP.md  FRAMEWORK.md  README.md  kb_loader.py  plan_bridge.py  pyproject.toml  requirements.txt  环境变量.example.txt  知微KB搜索.bat
contracts/: README.md  citation.schema.json  project_type_map.json  term_map.json  term_map_v3.bak.json
eval/: _build_norm_truth.py  auto_annotate.py  baseline_after_r2_guard_01.json  baseline_after_round3_clause_fact_patch.json  baseline_after_round3_clause_fact_patch.md  baseline_after_round4_fact_table_patch.json  baseline_after_t4_01.json  baseline_after_t4_01.md  baseline_report.json  build_citation_review_sheet.py  candidate_report.json  clause_calibrate.py  clause_calibration.json  clause_eval.py  clause_eval_report.json  clause_golden_samples.json  code_norm_consistency.py  compare_reports.py  comparison_report.json  comparison_report.md  golden_norm_truth.jsonl  golden_queries.jsonl  kb_eval.py  kb_truth_eval.py  nl_long_queries.jsonl  pipeline_extractor_baseline.json  pipeline_extractor_snapshot.py  pipeline_graph_baseline.json  pipeline_graph_snapshot.py  pipeline_index_baseline.json  pipeline_index_snapshot.py  plan_writer_citation_eval.py  plan_writer_citation_eval_report.json  plan_writer_citation_eval_report.md  plan_writer_citation_sample.docx  plan_writer_citation_sample_with_summary.docx  plan_writer_citation_summary_sample.json  plan_writer_conflict_baseline.json  plan_writer_conflict_snapshot.py  provenance_guard.py  (+22 more)
kb_core/: .metrics_status.jsonl  .mtime_snapshot.json  __init__.py  changelog.py  (+14 more)
(+103 files in other folders)
